--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             это надо как-то реализовывать? или это потом? -->
           </section>
 
-          <section class="login">
+          <section class="login">Вход
               <form class="login-form">
                 <section class="login">
                   <input class="login-field" type="text" id="login-email" placeholder="Электронная почта">
@@ -83,14 +83,14 @@
           <a class="button-preview" href="#">Давайте оба!</a>
         </div>
 
-        <div class="special-offer"
+        <div class="special-offer">
           <section class="free-raspberries">
             <h2 class="offering">Малинка даром!</h2>
               <p>При покупке 2 кг любого фруктового мороженого, добавим
               в ваш заказ банку малинового варенья бесплатно.</p>
               <a class="offering-button" href="#">Хочу варенье!</a>
           </section>
-          <section class="free-chocolate"
+          <section class="free-chocolate">
             <h2 class="offering">Шоколадки даром!</h2>
               <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
                   вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
@@ -204,7 +204,7 @@
         <a href="env-standards">Экологические стандарты</a>
       </section>
       <section class="copyright">
-        <img src="#"><a href="https://htmlacademy.ru/intensive/htmlcss"></a></img>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="#" alt="HTML Academy"></a>
         Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017
       </section>
     </footer>
