--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <input class="preview-radio" type="radio" id="preview-1" name="bg-input" checked>
+    <input class="preview-radio" type="radio" id="preview-2" name="bg-input">
+    <input class="preview-radio" type="radio" id="preview-3" name="bg-input">
     <div class="page-wrapper">
-      <div class="slider">
-        <input type="radio" id="preview-1" name="bg-input" checked>
-        <input type="radio" id="preview-2" name="bg-input">
-        <input type="radio" id="preview-3" name="bg-input">
-      </div>
     <header class="main-header">
       <nav class="main-navigation">
         <div class="logo">
@@ -29,23 +27,22 @@
           <a href="about">О Компании</a>
       </nav>
         <div class="user-block">
-          <section class="search">
+          <section class="search">Поиск
+            <a href="search.html" class="search-html"></a>
             <form method="post" class="search">
               <input class="input" type="search" placeholder="Что ищем?">
               <input class="submit" type="submit">
             </form>
-            <!-- открытие формы поиска после клика мышки,
-            это надо как-то реализовывать? или это потом? -->
           </section>
 
           <section class="login">Вход
+              <a href="search.html" class="search-html"></a>
               <form class="login-form">
                 <section class="login">
                   <input class="login-field" type="text" id="login-email" placeholder="Электронная почта">
                   <input class="login-field" type="password" id="login-pass" placeholder="Пароль">
                   <button type="submit" class="button-enter">Войти</button>
                 </section>
-
                 <section class="login-links">
                   <a href="#" class="link">Забыли пароль?</a>
                   <a href="#" class="link">Новая регистрация</a>
@@ -54,8 +51,6 @@
           </section>
 
           <section class="basket">Пусто
-            <!-- не знаю точно как правильно реализовать открытие корзины, там
-            же ещё будут два товара на странице каталога-->
           </section>
         </div>
           <section class="work-time">
@@ -64,25 +59,30 @@
           </section>
     </header>
     <main>
-      <div class="centerize">
+      <div class="container">
         <h1 class="visually-hidden">Магазин мороженого GllacyShop</h1>
-
-        <div class="preview-1">
-          <label class="preview-message" for="preview-1">Крем-брюле и пломбир
-             с малиновым джемом</label>
-          <a class="button-preview" href="#">Давайте оба!</a>
+        <div class="slider">
+          <div class="controls">
+            <label for="preview-1"></label>
+            <label for="preview-2"></label>
+            <label for="preview-3"></label>
+          </div>
+          <div class="preview-1">
+            <div class="preview-message">Крем-брюле и пломбир
+              с малиновым джемом</div>
+            <a class="button-preview" href="#">Давайте оба!</a>
+          </div>
+          <div class="preview-2">
+            <div class="preview-message">Шоколадный пломбир и
+              лимонный сорбет</div>
+            <a class="button-preview" href="#">Давайте оба!</a>
+          </div>
+          <div class="preview-3">
+            <div class="preview-message">Пломбир с помадкой
+              и клубничный щербет</div>
+            <a class="button-preview" href="#">Давайте оба!</a>
+          </div>
         </div>
-        <div class="preview-2">
-          <label class="preview-message" for="preview-2">Шоколадный пломбир и
-            лимонный сорбет</label>
-          <a class="button-preview" href="#">Давайте оба!</a>
-        </div>
-        <div class="preview-3">
-          <label class="preview-message" for="preview-3">Пломбир с помадкой
-            и клубничный щербет</label>
-          <a class="button-preview" href="#">Давайте оба!</a>
-        </div>
-
         <div class="special-offer">
           <section class="free-raspberries">
             <h2 class="offering">Малинка даром!</h2>
@@ -102,40 +102,52 @@
           <h2 class="visually-hidden">Популярное мороженое</h2>
             <ul class="icecream-list">
               <li class="icecream-item">
-                <a href="#">Сливочное с апельсиновым
-                  джемом и цитрусовой стружкой</a>
+                <h3><a href="#">Сливочное с апельсиновым
+                  джемом и цитрусовой стружкой</a></h3>
                 <img src="img/icecream.jpg" width="100" height="100" alt="Сливочное с апельсиновым
                   джемом и цитрусовой стружкой">
                     <!-- тут должен быть псевдо элемент -->
                 <span class="price">310Р</span>
                 <span class="weight">кг</span>
+                <div class="product-view">
+                  <a href="#" class="product-view">Быстрый просмотр</a>
+                </div>
               </li>
               <li class="icecream-item">
-                <a href="#">Сливочно-кофейное с кусочками
-                  шоколада</a>
+                <h3><a href="#">Сливочно-кофейное с кусочками
+                  шоколада</a></h3>
                 <img src="img/icecream.jpg" width="100" height="100" alt="Сливочно-кофейное с кусочками
                   шоколада">
                     <!-- тут должен быть псевдо элемент -->
                   <span class="price">380Р</span>
                   <span class="weight">кг</span>
+                  <div class="product-view">
+                    <a href="#" class="product-view">Быстрый просмотр</a>
+                  </div>
               </li>
               <li class="icecream-item">
-                <a href="#">Сливочно-клубничное с
-                  присыпкой из белого шоколада</a>
+                <h3><a href="#">Сливочно-клубничное с
+                  присыпкой из белого шоколада</a></h3>
                 <img src="img/icecream.jpg" width="100" height="100" alt="Сливочно-клубничное с присыпкой
                   из белого шоколада">
                     <!-- тут должен быть псевдо элемент -->
                 <span class="price">355Р</span>
                 <span class="weight">кг</span>
+                <div class="product-view">
+                  <a href="#" class="product-view">Быстрый просмотр</a>
+                </div>
               </li>
               <li class="icecream-item">
-                <a href="#">Сливочное крем-брюле с
-                  карамельной подливкой</a>
+                <h3><a href="#">Сливочное крем-брюле с
+                  карамельной подливкой</a></h3>
                 <img src="img/icecream.jpg" width="100" height="100" alt="Сливочное крем-брюле с
                   карамельной подливкой">
                     <!-- тут должен быть псевдо элемент -->
                 <span class="price">415Р</span>
                 <span class="weight">кг</span>
+                <div class="product-view">
+                  <a href="#" class="product-view">Быстрый просмотр</a>
+                </div>
               </li>
             </ul>
         </section>
@@ -178,15 +190,14 @@
 
         <section class="map">
           <h2 class="visually-hidden">Как до нас добраться</h2>
-          <p>Адрес главного офиса и офлайн магазина:</p>
-          <p class="contacts"><b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b></p>
-          <p>Для заказов по телефону:</p>
-          <p class="contacts">8 812 450-25-25</p>
-          <p>(с 10 до 20 ежедневно)</p>
-          <a class="feedback-button" href="#">Форма обратной связи</a>
-          <!-- в доп требованиях нужно реализовать открытие модального окна после
-          клика на "Форма обратной связи". Как это делается или где взять
-          информацию об этом?-->
+            <section class="contacts-section">
+              <p>Адрес главного офиса и офлайн магазина:</p>
+              <p class="contacts"><b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b></p>
+              <p>Для заказов по телефону:</p>
+              <p class="contacts">8 812 450-25-25</p>
+              <p>(с 10 до 20 ежедневно)</p>
+              <a class="feedback-button" href="#">Форма обратной связи</a>
+            </section>
         </section>
       </div>
     </main>
@@ -208,6 +219,15 @@
         Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017
       </section>
     </footer>
+    <section class="feedback">
+      <p class="feedback-title">Мы обязательно вам ответим!</p>
+      <form class="feedback-form">
+          <input class="feedback-field" type="text" id="name" placeholder="Как вас зовут?">
+          <input class="feedback-field" type="text" id="email" placeholder="Ваша почта для ответа?">
+          <input class="feedback-filed2" type="text" id="cover" placeholder="Напишите что-нибудь...">
+          <button type="submit" class="button-send">Отправить</button>
+      </form>
+    </section>
     </div>
   </body>
 </html>
