Подготовка графики и текстовых стилей

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Сладкий магазин "GllacyShop"</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <img src="img/logo-gllacy.png" width="100" height="50" alt="Глейси">
   </head>
   <body>
     <input class="preview-radio" type="radio" id="preview-1" name="bg-input" checked>
@@ -55,7 +57,7 @@
         </div>
           <section class="work-time">
             <p>С 10 до 20, ежедневно</p>
-            <a href="tel:+78124502525">8 812 450-25-25</a>
+            <a class="tel" href="tel:+78124502525">8 812 450-25-25</a>
           </section>
     </header>
     <main>
