--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <title>Сладкий магазин "GllacyShop"</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <img src="img/logo-gllacy.png" width="100" height="50" alt="Глейси">
   </head>
   <body>
     <input class="preview-radio" type="radio" id="preview-1" name="bg-input" checked>
+      <img src="img/slide-1.jpg" alt="Крем-брюле и пломбир
+        с малиновым джемом">
     <input class="preview-radio" type="radio" id="preview-2" name="bg-input">
     <input class="preview-radio" type="radio" id="preview-3" name="bg-input">
     <div class="page-wrapper">
     <header class="main-header">
       <nav class="main-navigation">
         <div class="logo">
-          <img src="img/index-logo.svg" width="100" height="50" alt="Логотип магазина GllacyShop">
+          <img src="img/logo-gllacy.svg" alt="Логотип магазина GllacyShop">
         </div>
           <a href="catalog">Каталог</a>
           <ul class="sub-list">
@@ -29,6 +30,7 @@
           <a href="about">О Компании</a>
       </nav>
         <div class="user-block">
+          <img src="img/lens.svg" alt="Поиск">
           <section class="search">Поиск
             <a href="search.html" class="search-html"></a>
             <form method="post" class="search">
@@ -37,6 +39,7 @@
             </form>
           </section>
 
+          <img src="img/entrance.svg" alt="Вход">
           <section class="login">Вход
               <a href="search.html" class="search-html"></a>
               <form class="login-form">
@@ -52,6 +55,7 @@
               </form>
           </section>
 
+          <img src="img/basket.svg" alt="Корзина">
           <section class="basket">Пусто
           </section>
         </div>
